Fluid will only bake first flame if Video Node editor is open. #33092

Closed
opened 2012-11-05 13:28:07 +01:00 by Leandro Correia · 8 comments

%%%That's it, a weird bug. I realized that if I try to bake a fluid simulation, it will bake only the first frame and then stop. Oddly, baking will work fine if the Node Editor is closed or if "Use Nodes" is not activated.

I attached a simple fluid simulation file. If you try to bake the fluid simulation, it will stop at the first frame. If you uncheck "Use Nodes" or remove the "Node Editor" from the interface (joining areas or changing it in the Editor Type button), baking will work normally. It took me a long time to realize this, and I'm sure that many people have this problem and don't know why (after Googling around).

This bug was tested only in Blender 2.64 r51026, but I'm sure it exists on previous Blender versions, although I've seen it only in Windows.

%%%

%%%That's it, a weird bug. I realized that if I try to bake a fluid simulation, it will bake only the first frame and then stop. Oddly, baking will work fine if the Node Editor is closed or if "Use Nodes" is not activated. I attached a simple fluid simulation file. If you try to bake the fluid simulation, it will stop at the first frame. If you uncheck "Use Nodes" or remove the "Node Editor" from the interface (joining areas or changing it in the Editor Type button), baking will work normally. It took me a long time to realize this, and I'm sure that many people have this problem and don't know why (after Googling around). This bug was tested only in Blender 2.64 r51026, but I'm sure it exists on previous Blender versions, although I've seen it only in Windows. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Crashes on Windows x64, msvc2008, backtrace leads to Node Editor: http://www.pasteall.org/36937%%%

%%%Crashes on Windows x64, msvc2008, backtrace leads to Node Editor: http://www.pasteall.org/36937%%%
Member

%%%Will investigate it tomorrow%%%

%%%Will investigate it tomorrow%%%

%%%Extra info: I've seen this bug on both 32 and 64 bit versions of Blender for Windows.%%%

%%%Extra info: I've seen this bug on both 32 and 64 bit versions of Blender for Windows.%%%

%%%Edit: Mea culpa... in Blender 64 it crashes, in Blender 32 it simply bakes first frame only.%%%

%%%Edit: Mea culpa... in Blender 64 it crashes, in Blender 32 it simply bakes first frame only.%%%
Member

%%%I found the bug - very bad one, in Blender 2.5 for long too.

The bug was in code to get a WindowManager thread job - it was giving the running fluid job to the compositer... tsk tsk%%%

%%%I found the bug - very bad one, in Blender 2.5 for long too. The bug was in code to get a WindowManager thread job - it was giving the running fluid job to the compositer... tsk tsk%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thanks!%%%

%%%Thanks!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33092
No description provided.